<resources>
    <string name="app_name">Lemon</string>
    <string name="home_button">Home</string>
    <string name="main_page">Main Page</string>
    <string name="settings">Settings</string>
    <string name="location">Locations</string>
    <string name="search_button">Search</string>
    <string name="back_button">Back</string>
    <string name="search_prompt">Search for a city...</string>
</resources>